<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Alarm</string>
    
    <!-- Navigation Drawer -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="language">Language</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    
    <!-- Bottom Navigation -->
    <string name="clock">Clock</string>
    <string name="alarm">Alarm</string>
    <string name="chronometer">Chronometer</string>
    <string name="timer">Timer</string>
    
    <!-- Common -->
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="lap">Lap</string>
    <string name="lap_format">Lap %d: %s</string>
    
    <!-- Timer -->
    <string name="timer_complete">Timer Complete</string>
    <string name="timer_message">Your timer has finished!</string>
    <string name="silence">Silence</string>
    
    <!-- Alarm -->
    <string name="new_alarm">New Alarm</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="save">Save</string>
    <string name="alarm_title">Alarm Title</string>
    <string name="vibration">Vibration</string>
    <string name="repeat">Repeat</string>
    <string name="sound">Sound</string>
    <string name="once">Once</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="sunday_short">S</string>
    <string name="delete_confirmation">Are you sure you want to delete this alarm?</string>
    <string name="default_sound">Default sound</string>
    <string name="alarm_notification_title">Time for your alarm!</string>
    <string name="alarm_notification_message">%s - Time to wake up</string>
    <string name="alarms">Alarms</string>
    <string name="alarm_notifications">Alarm notifications</string>
    <string name="timer_notifications">Timer notifications</string>
    <string name="alarm_name">Alarm name</string>
    <string name="weekdays">Monday to Friday</string>
    <string name="everyday">Every day</string>
    <string name="alarm_time">Alarm time</string>
    <string name="no_alarms">No alarms set</string>
    <string name="add_alarm">Add alarm</string>

    <!-- Clock -->
    <string name="long_press_hint">Long press to open system time settings</string>
    <string name="local_time">Local Time</string>
    <string name="world_clock">World Clock</string>
    <string name="new_york">New York</string>
    <string name="london">London</string>
    <string name="tokyo">Tokyo</string>
    <string name="sydney">Sydney</string>
    
    <!-- Dialog -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="timezone_management">Timezone Management</string>
    <string name="add_timezone_question">Do you want to add this timezone to favorites?</string>
    <string name="remove_timezone_question">Do you want to remove this timezone from favorites?</string>
    <string name="timezone_added">Timezone added to favorites</string>
    <string name="timezone_removed">Timezone removed from favorites</string>
    <string name="open_time_settings_question">Do you want to open system time settings?</string>
    <string name="cannot_open_settings">Cannot open time settings</string>
</resources>